# fork-doctor

./: .pre-commit-config.yaml  CONTRIBUTING.md  LAUNCH.md  LICENSE  README.md  llms.txt  pyproject.toml  schema.json
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: benchmark.yml  ci.yml  codeql.yml  publish.yml  release.yml  sbom.yml
docs/: usage.md
src/fork_doctor/: __init__.py  analyzer.py  cli.py  improver.py  language_detect.py  reporter.py
src/fork_doctor/templates/: benchmark.yml.j2  ci.yml.j2  codeql.yml.j2  contributing.md.j2  dependabot.yml.j2  devcontainer.json.j2  issue_template.md.j2  pre-commit.yaml.j2  readme_badges.md.j2  release.yml.j2
tests/: __init__.py  test_analyzer.py  test_cli.py  test_templates.py
