[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fork-doctor"
version = "0.2.0"
description = "Automated fork analysis and structural improvement for GitHub repositories"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "BonanzaPay", email = "bonanzapay@proton.me" }]
keywords = ["github", "repository-health", "devops", "automation", "ci-cd", "security", "sbom"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pre-commit>=3.0",
]

[project.scripts]
fork-doctor = "fork_doctor.cli:app"

[project.urls]
Homepage = "https://github.com/c6zks4gssn-droid/fork-doctor"
Issues = "https://github.com/c6zks4gssn-droid/fork-doctor/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/fork_doctor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py39"
line-length = 100
